# sql-ast-generator

./: ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libtool  sample.sql
doc/: state-machine.dot
src/: Makefile.am  Makefile.in  main.cpp  naive-lexer.cpp  naive-lexer.hpp  state-machine.cpp  state-machine.hpp  tree.cpp  tree.hpp
test/: Makefile.am  Makefile.in  queries.sql  tst-sql-parser.cpp  visualize.sh
win32/: sql-ast-generator.sln
win32/sql-ast-generator/: sql-ast-generator.vcxproj  sql-ast-generator.vcxproj.filters
