AC_PREREQ([2.69])
AC_INIT([naive-sql-parser], [0.1.0], [soroush.rabiei@gmail.com])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

# Check for C++11
AX_CXX_COMPILE_STDCXX_11([noext], [mandatory])

# Checks for programs.
AC_PROG_CXX

# Configure automake
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

LT_INIT([static shared pic-only])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 test/Makefile])

AC_OUTPUT
